export const authScreenTestIDs = Object.freeze({
  SWITCH_FORM: 'SWITCH_FORM',
  SUBMIT_LOGIN: 'SUBMIT_LOGIN',
  SUBMIT_REGISTER: 'SUBMIT_REGISTER',
  SUBMIT_USER_UPDATE: 'SUBMIT_USER_UPDATE',
  FIRST_NAME_INPUT: 'FIRST_NAME_INPUT',
  LAST_NAME_INPUT: 'LAST_NAME_INPUT',
  EMAIL_INPUT: 'EMAIL_INPUT',
  LOGIN_EMAIL_INPUT: 'LOGIN_EMAIL_INPUT',
  PASSWORD_INPUT: 'PASSWORD_INPUT',
  LOGIN_PASSWORD_INPUT: 'LOGIN_PASSWORD_INPUT',
  MATCHING_PASSWORD_INPUT: 'MATCHING_PASSWORD_INPUT'
});
